# SFTechWeek-2025-Hackathon

./: CODE_OF_CONDUCT.md  README.md  RESOURCES.md  Thought_Starters.md  evaluation_template.md  hackathon-rating-rubric.md
submissions/Principal-AI/: README.md
submissions/Principal-AI/docs/: ARCHITECTURE.md  CORE_LLM_DESIGN.md  DIAGRAM_INTEGRATION.md  IMPLEMENTATION.md  PROJECT_PLAN.md
submissions/Principal-AI/web/: .env.local.example  .eslintrc.json  FILE_REFERENCES_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_V3_GUIDE.md  TOGGLE_GUIDE.md  appwrite.config.json  package-lock.json  package.json  test-chat-versions.sh
submissions/hjlees/: CHAT_FEATURE_ARCHITECTURE.md  README.md
submissions/hjlees/docs/: AGORA_API_TEST.md  AGORA_AVATAR_GUIDE.md  AGORA_CONSOLE_SETUP.md  AGORA_SUPPORT_REQUEST.md  ARCHITECTURE.md  BARGE_IN_FEATURE.md  HEYGEN_DEMO_SCRIPT.md  HEYGEN_NOTICE.md  HEYGEN_QUICK_REPORT.txt  HEYGEN_SUPPORT_TICKET.md  PROJECT_STATUS.md  SETUP.md  TROUBLESHOOTING.md  VIDEO_AVATAR_ARCHITECTURE.md  VOICE_CHAT_GUIDE.md  WORKING_FEATURES_DEMO.md
submissions/hjlees/src/: .gitignore  README.md  agora_service.py  ai_agent.py  app.py  config.py  database.py  env.example  heygen_service.py  models.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup_appwrite.py  tts_service.py  update_env.py
submissions/hjlees/src/static/css/: style.css
submissions/hjlees/src/static/js/: agora.js  app.js  avatar.js
submissions/hjlees/src/templates/: index.html
submissions/quin-brandon/: IMPLEMENTATION_PLAN.md  README.md
submissions/quin-brandon/src/: package-lock.json  (+1 more)
(+56 files in other folders)
